maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:8: error: reassignment to val
    c=c-1
     ^PledgeMaze:14: error: reassignment to val
      c=1+c
       ^